--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -11,4 +11,6 @@
     <string name="description_post_save">Save</string>
     <string name="post_text">Post\'s text</string>
     <string name="error_empty_content">Content can\'t be empty</string>
+    <string name="chooser_share_post">Share</string>
+    <string name="add_post">Создать пост</string>
 </resources>
