--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="description_post_save">Сохранить</string>
     <string name="post_text">Текст поста</string>
     <string name="error_empty_content">Контент не может быть пустым</string>
+    <string name="chooser_share_post">Поделиться</string>
+    <string name="add_post">Создать пост</string>
 </resources>
