--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,10 @@
     <string name="error_empty_content">Контент не может быть пустым</string>
     <string name="chooser_share_post">Поделиться</string>
     <string name="add_post">Создать пост</string>
+    <string name="google_play_unavailable">Google Api Недоступно</string>
+    <string name="notification_user_liked">%1$s поставил лайк посту %2$s</string>
+    <string name="notification_new_post"  formatted="true">%1$s опубликовал новый пост:</string>
+    <string name="channel_remote_name">Уведомления с сервера</string>
+    <string name="channel_remote_description">Уведомления с удалённого сервера</string>
+    <string name="push_type_not_identified">Тип пуша не идентиицирован</string>
 </resources>
